--- a/Layouts/downloads.yaml
+++ b/Layouts/downloads.yaml
@@ -26,8 +26,26 @@
 
 
 downloads:
-  - linkText: 
-    linkUrl: 
+  - linkText: Weekly cases by specimen date at MSOA level as CSV (stacked)
+    linkUrl: /downloads/msoa_data/MSOAs_latest.csv
 
-  - linkText: 
-    linkUrl: 
+  - linkText: Weekly cases by specimen date at MSOA level as JSON
+    linkUrl: /downloads/msoa_data/MSOAs_latest.json
+
+  - linkText: Geographic lookup of MSOA to local authority and region as CSV 
+    linkUrl: /downloads/supplements/lookup_table.csv
+
+  - linkText: Age demographic of cases by specimen date as CSV (unstacked)
+    linkUrl: /downloads/demographic/cases/specimenDate_ageDemographic-unstacked.csv
+  
+  - linkText: Age demographic of cases by specimen date as CSV (stacked)
+    linkUrl: /downloads/demographic/cases/specimenDate_ageDemographic-stacked.csv
+
+  - linkText: Age demographic of cases by reporting date as CSV (unstacked)
+    linkUrl: /downloads/demographic/cases/publishDate_ageDemographic-unstacked.csv
+
+   - linkText: Age demographic of cases by reporting date as CSV (stacked)
+    linkUrl: /downloads/demographic/cases/publishDate_ageDemographic-stacked.csv
+
+  - linkText: Legacy download of cases from the previous version of the dashboard as CSV (stacked)
+    linkUrl: /downloads/csv/coronavirus-cases_latest.csv
