--- a/Layouts/Changes/apiChangeLog.yaml
+++ b/Layouts/Changes/apiChangeLog.yaml
@@ -1,7 +1,7 @@
 apiChangeLog:
 
   - metricName: newCasesBySpecimenDate
-    date: 2020-11-16
+    date: "2020-11-16"
 
   - metricName: cumCasesBySpecimenDate
-    date: 2020-11-16
+    date: "2020-11-16"
