--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -25,7 +25,7 @@ cards:
 
 # Only shown for UK
 
-  - heading: Testing and capacity, by test type
+  - heading: Virus tests conducted, by test type
     cardType: chart
     locationAware:
       included: 
@@ -34,30 +34,29 @@ cards:
 
     fullWidth: true
     abstract: >
-      Number of confirmed positive, negative or void COVID-19 test results, by test type.  
-      This is a count of test results and may include multiple tests for an individual person.  Virus tests test for 
-      the presence of COVID-19 and include all pillar 1 and 2 tests and any virus tests undertaken 
-      in pillar 4. Lateral flow device tests are included within pillar 2. Antibody serology tests test for COVID-19
-       antibodies and include pillar 3 tests and any antibody 
-      serology tests undertaken in pillar 4. Testing capacity is a projection based on reports from labs on how 
-      many lab-based tests they have capacity to carry out each day based on availability of staff and resources.
+      Number of confirmed positive, negative or void COVID-19 virus test results, by test type.  
+      This is a count of test results and may include multiple tests for an individual person.  
+      Virus tests test for the presence of COVID-19 and include all pillar 1 and 2 tests and 
+      any virus tests undertaken in pillar 4. Virus tests include PCR tests conducted in 
+      laboratories and lateral flow device tests that give results in less than an hour, without 
+      needing to go to a laboratory.
 
     download:
-      - plannedPCRCapacityByPublishDate
-      - plannedAntibodyCapacityByPublishDate
       - newVirusTests
       - cumVirusTests
-      - newAntibodyTestsByPublishDate
-      - cumAntibodyTestsByPublishDate
+      - newPCRTestsByPublishDate
+      - cumPCRTestsByPublishDate
+      - newLFDTests
+      - cumLFDTests
 
     options:
       type: radio
       heading: null
       choices:
-        - Virus tests
-        - Antibody tests
+        - All virus tests
+        - By test type
 
-    Virus tests:
+    All virus tests:
       
       tabs:
         - heading: Daily
@@ -80,14 +79,6 @@ cards:
               rollingAverage:
                 window: 7
                 clipEnd: 3
-
-            - label: PCR testing capacity
-              value: plannedPCRCapacityByPublishDate
-              tooltip: Estimated daily capacity for PCR testing reported by laboratories for {date}
-              type: line
-              colour: 6
-              fill: true
-              rollingAverage: false
 
         - heading: Cumulative
           tabType: chart
@@ -117,6 +108,187 @@ cards:
               value: cumVirusTests
               type: numeric
               tooltip: Cumulative number of virus tests conducted up to {date}
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/testing/cardVirusTestsConducted.md
+
+    By test type:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: PCR tests processed
+              value: newPCRTestsByPublishDate
+              tooltip: Daily number of PCR tests conducted by laboratories on {date}
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: LFD tests processed
+              value: newLFDTests
+              tooltip: Daily number of lateral flow device tests conducted on {date}
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+        - heading: Cumulative
+          tabType: chart
+          barType: normal
+          fields:
+            - label: PCR tests processed
+              value: cumPCRTestsByPublishDate
+              tooltip: Cumulative number of PCR tests conducted by laboratories up to {date}
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: LFD tests processed
+              value: cumLFDTests
+              tooltip: Cumulative number of LFD tests conducted up to {date}
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date
+              value: date
+              type: date
+              tooltip: Date
+
+            - label: Daily PCR tests conducted
+              value: newPCRTestsByPublishDate
+              type: numeric
+              tooltip: Daily number of PCR tests conducted on {date}
+
+            - label: Daily LFD tests conducted
+              value: newLFDTests
+              type: numeric
+              tooltip: Daily number of LFD tests conducted on {date}
+
+            - label: Daily virus tests conducted
+              value: newVirusTests
+              type: numeric
+              tooltip: Daily number of virus tests conducted on {date}
+
+            - label: Cumulative PCR tests conducted
+              value: cumPCRTestsByPublishDate
+              type: numeric
+              tooltip: Total number of PCR tests conducted up to {date}
+
+            - label: Cumulative LFD tests conducted
+              value: cumLFDTests
+              type: numeric
+              tooltip: Total number of LFD tests conducted up to {date}
+
+            - label: Cumulative virus tests conducted
+              value: cumVirusTests
+              type: numeric
+              tooltip: Total number of virus tests conducted up to {date}
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/testing/cardVirusTestsConducted.md
+
+##############################################################################################################################
+
+# Only shown for UK
+
+  - heading: Lab-based testing and capacity, by test type
+    cardType: chart
+    locationAware:
+      included: 
+        areaType:
+          - overview
+
+    fullWidth: true
+    abstract: >
+      Number of confirmed positive, negative or void COVID-19 lab-based test results, by test type.  
+      This is a count of test results and may include multiple tests for an individual person.  PCR tests test for 
+      the presence of COVID-19 and include all lab-based pillar 1 and 2 tests and any PCR tests undertaken 
+      in pillar 4. Antibody serology tests test for COVID-19 antibodies and include pillar 3 tests and any antibody 
+      serology tests undertaken in pillar 4. Testing capacity is a projection based on reports from labs on how 
+      many lab-based tests they have capacity to carry out each day based on availability of staff and resources.
+
+    download:
+      - plannedPCRCapacityByPublishDate
+      - newPCRTestsByPublishDate
+      - cumPCRTestsByPublishDate
+      - plannedAntibodyCapacityByPublishDate
+      - newAntibodyTestsByPublishDate
+      - cumAntibodyTestsByPublishDate
+
+    options:
+      type: radio
+      heading: null
+      choices:
+        - PCR tests
+        - Antibody tests
+
+    PCR tests:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: PCR tests conducted
+              value: newPCRTestsByPublishDate
+              tooltip: Daily number of PCR tests conducted
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: PCR tests conducted (7-day average)
+              value: newPCRTestsByPublishDate
+              tooltip: 7 day rolling average of the daily number of PCR tests conducted on {date}
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage:
+                window: 7
+                clipEnd: 3
+
+            - label: PCR testing capacity
+              value: plannedPCRCapacityByPublishDate
+              tooltip: Estimated daily capacity for PCR testing reported by laboratories for {date}
+              type: line
+              colour: 6
+              fill: true
+              rollingAverage: false
+
+        - heading: Cumulative
+          tabType: chart
+          barType: normal
+          fields:
+            - label: PCR tests conducted
+              value: cumPCRTestsByPublishDate
+              tooltip: Cumulative number of PCR tests conducted up to {date}
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported on coronavirus.data.gov.uk
+
+            - label: Daily PCR tests conducted
+              value: newPCRTestsByPublishDate
+              type: numeric
+              tooltip: Daily number of PCR tests conducted on {date}
+
+            - label: Cumulative PCR tests conducted
+              value: cumPCRTestsByPublishDate
+              type: numeric
+              tooltip: Cumulative number of PCR tests conducted up to {date}
 
             - label: PCR testing capacity
               value: plannedPCRCapacityByPublishDate
