--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -74,6 +74,10 @@ cards:
               tooltip: Daily number of new people tested positive, by specimen date
               type: bar
               rollingAverage: false
+              highlight: 
+                from: -5
+                to: 0
+                colour: 6
 
             - label: Cases (7-day average)
               value: newCasesBySpecimenDate
