--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -78,6 +78,7 @@ cards:
                 from: -5
                 to: 0
                 colour: 6
+                label: "Some label"
 
             - label: Cases (7-day average)
               value: newCasesBySpecimenDate
