--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -885,6 +885,99 @@ cards:
 ##############################################################################################################################
 
 # {{ StartDevOnlyBlock }}
+
+  - heading: Mechanical ventilation bed occupancy (dev only)
+    cardType: chart
+    fullWidth: true
+    abstract: >
+      mechanical ventilation bed occupany by occupant type. Data from the four nations may not be
+      directly comparable as data about COVID-19 patients in hospitals are collected differently. Data
+      are not reported by each nation every day and England data are not available before 2 April. The
+      UK figure is the sum of the four nations' figures and can only be calculated when all nations'
+      data are available.
+
+    download:
+      - covidOccupiedMVBeds
+      - suspectedCovidOccupiedMVBeds
+      - nonCovidOccupiedMVBeds
+      - unoccupiedMVBeds
+      - totalMVBeds
+
+    tabs:
+      - heading: Daily
+        tabType: chart
+        barType: stack
+        fields:
+          - label: Covid occupied MV Beds
+            value: covidOccupiedMVBeds
+            tooltip: Number of mechanical ventilation beds occupied by confirmed COVID-19 patients
+            type: bar
+            colour: 3
+            rollingAverage: false
+
+          - label: Suspected-covid occupied MV beds
+            value: suspectedCovidOccupiedMVBeds
+            tooltip: Number of mechanical ventilation beds occupied by suspected COVID-19 patients 
+            type: bar
+            colour: 0
+            rollingAverage: false
+
+          - label: Non-covid occupied MV beds
+            value: nonCovidOccupiedMVBeds
+            tooltip: Number of mechanical ventilation beds occupied by non-COVID-19 patients 
+            type: bar
+            colour: 4
+            rollingAverage: false
+
+          - label: Unoccupied MV beds
+            value: unoccupiedMVBeds
+            tooltip: Number of unoccupied mechanical ventilation beds
+            type: bar
+            colour: 1
+            rollingAverage: false
+
+      - heading: Data
+        tabType: table
+        fields:
+          - label: Date
+            value: date
+            type: date
+            tooltip: Date
+
+          - label: Covid occupied MV beds
+            value: covidOccupiedMVBeds
+            type: numeric
+            tooltip: Number of mechanical ventilation beds occupied by COVID-19 patients
+
+          - label: Suspected-covid occupied MV beds
+            value: suspectedCovidOccupiedMVBeds
+            type: numeric
+            tooltip: Number of mechanical ventilation beds occupied by suspected COVID-19 patients 
+
+          - label: Non-covid occupied MV beds
+            value: nonCovidOccupiedMVBeds
+            type: numeric
+            tooltip: Number of mechanical ventilation beds occupied by non-COVID-19 patients 
+
+          - label: Unoccupied MV beds
+            value: unoccupiedMVBeds
+            type: numeric
+            tooltip: Number of unoccupied mechanical ventilation beds
+
+          - label: Total MV beds
+            value: totalMVBeds
+            type: numeric
+            tooltip: Total number of mechanical ventilation beds
+
+      - heading: About 
+        tabType: metadata
+        filename: cardMetadata/healthcare/cardMVBedOccupancy.md  
+
+# {{ EndDevOnlyBlock }}
+
+##############################################################################################################################
+
+# {{ StartDevOnlyBlock }}
 # # Not currently publishing patients discharged: needs discussion with NHS to agree definitions.
 # # We don't currently pull in the data from the DAs on this - they did agree to provide it when
 # # asked by the No 10 Press data team, but we have never finalised it
@@ -1085,162 +1178,5 @@ cards:
   #   fullWidth: true
   #   download:
   #     - TBC
-
-# {{ EndDevOnlyBlock }}
-
-##############################################################################################################################
-
-# {{ StartDevOnlyBlock }}
-
-  - heading: Mechanical ventilation bed occupancy (dev only)
-    cardType: chart
-    fullWidth: true
-    abstract: >
-      To Do - add abstract and card specific metadata.  Optimise visual.
-
-    download:
-      - covidOccupiedMVBeds
-      - suspectedCovidOccupiedMVBeds
-      - nonCovidOccupiedMVBeds
-      - unoccupiedMVBeds
-      - totalMVBeds
-
-    tabs:
-      - heading: Daily (option 1)
-        tabType: chart
-        barType: stack
-        fields:
-          - label: Covid occupied
-            value: covidOccupiedMVBeds
-            tooltip: Number of mechanical ventilation beds occupied by confirmed COVID-19 patients
-            type: bar
-            colour: 0
-            rollingAverage: false
-
-          - label: Suspected-covid occupied MV beds
-            value: suspectedCovidOccupiedMVBeds
-            tooltip: Number of mechanical ventilation beds occupied by suspected COVID-19 patients 
-            type: bar
-            colour: 3
-            rollingAverage: false
-
-          - label: Non-covid occupied MV beds
-            value: nonCovidOccupiedMVBeds
-            tooltip: Number of mechanical ventilation beds occupied by non-COVID-19 patients 
-            type: bar
-            colour: 4
-            rollingAverage: false
-
-          - label: Unoccupied MV beds
-            value: unoccupiedMVBeds
-            tooltip: Number of unoccupied mechanical ventilation beds
-            type: bar
-            colour: 1
-            rollingAverage: false
-
-      - heading: Daily (option 2)
-        tabType: chart
-        barType: line
-        fields:
-          - label: Covid occupied
-            value: covidOccupiedMVBeds
-            tooltip: Number of mechanical ventilation beds occupied by confirmed COVID-19 patients
-            type: line
-            colour: 0
-            rollingAverage: false
-
-          - label: Suspected-covid occupied MV beds
-            value: suspectedCovidOccupiedMVBeds
-            tooltip: Number of mechanical ventilation beds occupied by suspected COVID-19 patients 
-            type: line
-            colour: 3
-            rollingAverage: false
-
-          - label: Non-covid occupied MV beds
-            value: nonCovidOccupiedMVBeds
-            tooltip: Number of mechanical ventilation beds occupied by non-COVID-19 patients 
-            type: line
-            colour: 4
-            rollingAverage: false
-
-          - label: Unoccupied MV beds
-            value: unoccupiedMVBeds
-            tooltip: Number of unoccupied mechanical ventilation beds
-            type: line
-            colour: 1
-            rollingAverage: false
-
-      - heading: Daily (option 3)
-        tabType: chart
-        barType: line
-        fields:
-          - label: Covid occupied
-            value: covidOccupiedMVBeds
-            tooltip: Number of mechanical ventilation beds occupied by confirmed COVID-19 patients
-            type: line
-            fill: true
-            colour: 3
-            rollingAverage: false
-
-          - label: Suspected-covid occupied MV beds
-            value: suspectedCovidOccupiedMVBeds
-            tooltip: Number of mechanical ventilation beds occupied by suspected COVID-19 patients 
-            type: line
-            fill: false
-            colour: 0
-            rollingAverage: false
-
-          - label: Non-covid occupied MV beds
-            value: nonCovidOccupiedMVBeds
-            tooltip: Number of mechanical ventilation beds occupied by non-COVID-19 patients 
-            type: line
-            fill: false
-            colour: 4
-            rollingAverage: false
-
-          - label: Unoccupied MV beds
-            value: unoccupiedMVBeds
-            tooltip: Number of unoccupied mechanical ventilation beds
-            type: line
-            fill: false
-            colour: 1
-            rollingAverage: false
-
-      - heading: Data
-        tabType: table
-        fields:
-          - label: Date
-            value: date
-            type: date
-            tooltip: Date
-
-          - label: Covid occupied MV beds
-            value: covidOccupiedMVBeds
-            type: numeric
-            tooltip: Number of mechanical ventilation beds occupied by COVID-19 patients
-
-          - label: Suspected-covid occupied MV beds
-            value: suspectedCovidOccupiedMVBeds
-            type: numeric
-            tooltip: Number of mechanical ventilation beds occupied by suspected COVID-19 patients 
-
-          - label: Non-covid occupied MV beds
-            value: nonCovidOccupiedMVBeds
-            type: numeric
-            tooltip: Number of mechanical ventilation beds occupied by non-COVID-19 patients 
-
-          - label: Unoccupied MV beds
-            value: unoccupiedMVBeds
-            type: numeric
-            tooltip: Number of unoccupied mechanical ventilation beds
-
-          - label: Total MV beds
-            value: totalMVBeds
-            type: numeric
-            tooltip: Total number of mechanical ventilation beds
-
-      - heading: About 
-        tabType: metadata
-        filename: cardMetadata/healthcare/cardPatientsInMVBeds.md  
 
 # {{ EndDevOnlyBlock }}
