patients in MV Beds removed confirmed wording from abstract as Scotland includes suspected.

--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -662,7 +662,7 @@ cards:
           - overview
       
     abstract: >
-      Daily count of confirmed COVID-19 patients in mechanical ventilation beds. Data are not updated
+      Daily count of COVID-19 patients in mechanical ventilation beds. Data are not updated
       every day.
 
     download:
@@ -772,7 +772,7 @@ cards:
           - overview
 
     abstract: >
-      Confirmed COVID-19 patients in mechanical ventilation beds. Data from the four nations may not be
+      COVID-19 patients in mechanical ventilation beds. Data from the four nations may not be
       directly comparable as data about COVID-19 patients in hospitals are collected differently. Data
       are not reported by each nation every day and England data are not available before 2 April. The
       UK figure is the sum of the four nations' figures and can only be calculated when all nations'
