--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -43,7 +43,7 @@ cards:
     abstract: >
       Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date, 
       by nation.  Individuals tested positive more than once are only counted once, on the date of 
-      their first positive test.
+      their first positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
 
     download:
       - newCasesBySpecimenDate
@@ -78,7 +78,7 @@ cards:
                 from: -5
                 to: 0
                 colour: 6
-                label: "Some label"
+                label: "Most recent 5 days (incomplete)"
 
             - label: Cases (7-day average)
               value: newCasesBySpecimenDate
@@ -105,6 +105,11 @@ cards:
               tooltip: Cumulative total number of people tested positive, by specimen date
               type: bar
               rollingAverage: false
+              highlight: 
+                from: -5
+                to: 0
+                colour: 6
+                label: "Most recent 5 days (incomplete)"
 
         - heading: Data
           tabType: table
@@ -364,7 +369,7 @@ cards:
     abstract: >
       Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date.
       Individuals tested positive more than once are only counted once, on the date of their first
-      positive test.
+      positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
 
     download:
       - newCasesBySpecimenDate
@@ -381,6 +386,11 @@ cards:
             type: bar
             colour: 0
             rollingAverage: false
+            highlight: 
+              from: -5
+              to: 0
+              colour: 6
+              label: "Most recent 5 days (incomplete)"
 
           - label: Cases (7-day average)
             value: newCasesBySpecimenDate
@@ -401,6 +411,11 @@ cards:
             type: bar
             colour: 0
             rollingAverage: false
+            highlight: 
+              from: -5
+              to: 0
+              colour: 6
+              label: "Most recent 5 days (incomplete)"
 
       - heading: Data
         tabType: table
