--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -41,8 +41,8 @@ cards:
 
     fullWidth: true
     abstract: >
-      Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date, 
-      by nation.  Individuals tested positive more than once are only counted once, on the date of 
+      Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date.
+      Individuals tested positive more than once are only counted once, on the date of 
       their first positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
 
     download:
