--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -40,7 +40,7 @@ cards:
     abstract: > 
       Number of deaths of people who had had a positive test result for COVID-19 and died within 28 days
       of the first positive test. Data from the four nations are not directly comparable as methodologies 
-      and inclusion criteria vary.
+      and inclusion criteria vary. The most recent 5 days' data, highlighted in grey, are incomplete.
 
     download:
       - newDeaths28DaysByDeathDate
@@ -70,6 +70,11 @@ cards:
               tooltip: Daily number of deaths within 28 days of first positive test, by date of death
               type: bar
               rollingAverage: false
+              highlight: 
+                from: -5
+                to: 0
+                colour: 6
+                label: "Most recent 5 days (incomplete)"
 
             - label: (7-day average)
               value: newDeaths28DaysByDeathDate
@@ -94,6 +99,11 @@ cards:
               tooltip: Cumulative total number of deaths within 28 days of first positive test, by date of death
               type: bar
               rollingAverage: false
+              highlight: 
+                from: -5
+                to: 0
+                colour: 6
+                label: "Most recent 5 days (incomplete)"
 
         - heading: Data
           tabType: table
@@ -349,7 +359,7 @@ cards:
     abstract: > 
       Number of deaths of people who had had a positive test result for COVID-19 and died within 28 days
       of the first positive test. Data from the four nations are not directly comparable as methodologies 
-      and inclusion criteria vary.
+      and inclusion criteria vary. The most recent 5 days' data, highlighted in grey, are incomplete.
 
     download:
       - newDeaths28DaysByDeathDate
@@ -366,6 +376,11 @@ cards:
             type: bar
             colour: 0
             rollingAverage: false
+            highlight: 
+                from: -5
+                to: 0
+                colour: 6
+                label: "Most recent 5 days (incomplete)"
 
           - label: Deaths (7-day average)
             value: newDeaths28DaysByDeathDate
@@ -386,6 +401,11 @@ cards:
             type: bar
             colour: 0
             rollingAverage: false
+            highlight: 
+                from: -5
+                to: 0
+                colour: 6
+                label: "Most recent 5 days (incomplete)"
                   
       - heading: Data
         tabType: table
@@ -1042,7 +1062,8 @@ cards:
     fullWidth: true
     abstract: > 
       Number of deaths of people who had had a positive test result for COVID-19 and either died within 
-      60 days of the first positive test or have COVID-19 mentioned on their death certificate. 
+      60 days of the first positive test or have COVID-19 mentioned on their death certificate. The most 
+      recent 5 days' data by date of death, highlighted in grey, are incomplete.
 
     download:
       - newDeaths60DaysByDeathDate
@@ -1070,6 +1091,11 @@ cards:
               type: bar
               colour: 0
               rollingAverage: false
+              highlight: 
+                from: -5
+                to: 0
+                colour: 6
+                label: "Most recent 5 days (incomplete)"
 
             - label: Deaths (7-day average)
               value: newDeaths60DaysByDeathDate
@@ -1090,6 +1116,11 @@ cards:
               type: bar
               colour: 0
               rollingAverage: false
+              highlight: 
+                from: -5
+                to: 0
+                colour: 6
+                label: "Most recent 5 days (incomplete)"
                   
         - heading: Data
           tabType: table
@@ -1189,7 +1220,7 @@ cards:
     fullWidth: true
     abstract: > 
       Number of deaths of people who had had a positive test result for COVID-19 and either died within 
-      60 days of the first positive test or have COVID-19 mentioned on their death certificate. 
+      60 days of the first positive test or have COVID-19 mentioned on their death certificate. The most recent 5 days' data, highlighted in grey, are incomplete.
 
     download:
       - newDeaths60DaysByDeathDate
@@ -1208,6 +1239,11 @@ cards:
             type: bar
             colour: 0
             rollingAverage: false
+            highlight: 
+              from: -5
+              to: 0
+              colour: 6
+              label: "Most recent 5 days (incomplete)"
 
           - label: Deaths (7-day average)
             value: newDeaths60DaysByDeathDate
@@ -1228,6 +1264,11 @@ cards:
             type: bar
             colour: 0
             rollingAverage: false
+            highlight: 
+              from: -5
+              to: 0
+              colour: 6
+              label: "Most recent 5 days (incomplete)"
                   
       - heading: Data
         tabType: table
