--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -36,7 +36,7 @@ cards:
     abstract: >
       Number of confirmed positive, negative or void COVID-19 virus test results.  
       This is a count of test results and may include multiple tests for an individual person.  
-      Virus tests test for the presence of COVID-19 and include all pillar 1 and 2 tests and 
+      Virus tests test for the presence of of SARS-CoV-2 virus and include all pillar 1 and 2 tests and 
       any virus tests undertaken in pillar 4. Virus tests include PCR tests conducted in 
       laboratories and lateral flow device tests that give results in less than an hour, without 
       needing to go to a laboratory.
@@ -209,7 +209,7 @@ cards:
     abstract: >
       Number of confirmed positive, negative or void COVID-19 lab-based test results, by test type.  
       This is a count of test results and may include multiple tests for an individual person.  PCR tests test for 
-      the presence of COVID-19 and include all lab-based pillar 1 and 2 tests and any PCR tests undertaken 
+      the presence of of SARS-CoV-2 virus and include all lab-based pillar 1 and 2 tests and any PCR tests undertaken 
       in pillar 4. Antibody serology tests test for COVID-19 antibodies and include pillar 3 tests and any antibody 
       serology tests undertaken in pillar 4. Testing capacity is a projection based on reports from labs on how 
       many lab-based tests they have capacity to carry out each day based on availability of staff and resources.
@@ -608,7 +608,7 @@ cards:
     abstract: >
       Number of confirmed positive, negative or void lateral flow device test results. 
       This is a count of test results and may include multiple tests for an individual person. 
-      Lateral flow device tests test for the presence of COVID-19 and are swab tests that give 
+      Lateral flow device tests test for the presence of of SARS-CoV-2 virus and are swab tests that give 
       results in less than an hour, without needing to go to a laboratory. Lateral flow device tests
       have been used in trials of mass testing in schools, universities and care homes, and have been 
       available for those who live or work in Liverpool for a two-week period from 6 November 2020.
