--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -36,7 +36,7 @@ cards:
     abstract: >
       Number of confirmed positive, negative or void COVID-19 virus test results.  
       This is a count of test results and may include multiple tests for an individual person.  
-      Virus tests test for the presence of of SARS-CoV-2 virus and include all pillar 1 and 2 tests and 
+      Virus tests test for the presence of SARS-CoV-2 virus and include all pillar 1 and 2 tests and 
       any virus tests undertaken in pillar 4. Virus tests include PCR tests conducted in 
       laboratories and lateral flow device tests that give results in less than an hour, without 
       needing to go to a laboratory.
