--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1236,17 +1236,6 @@ cards:
     Change:
 
       tabs:
-        - heading: Seven day periods
-          tabType: chart
-          barType: overlay
-          fields:
-            - label: Percentage change in rate of cases in 7-day period
-              value: newCasesBySpecimenDateChangePercentage
-              tooltip: Percentage change in rate of new people tested positive in the seven day period ending on the date shown by date the sample was taken 
-              type: bar
-              colour: 0
-              rollingAverage: false
-
         - heading: Data
           tabType: table
           fields:
@@ -1269,6 +1258,17 @@ cards:
               value: newCasesBySpecimenDateChangePercentage
               type: numeric
               tooltip: Percentage change in rate of new people tested positive in the seven day period ending on the date shown by date the sample was taken
+
+        - heading: Seven day periods
+          tabType: chart
+          barType: logy
+          fields:
+            - label: Percentage change in rate of cases in 7-day period
+              value: newCasesBySpecimenDateChangePercentage
+              tooltip: Percentage change in rate of new people tested positive in the seven day period ending on the date shown by date the sample was taken 
+              type: bar
+              colour: 0
+              rollingAverage: false
 
         - heading: About 
           tabType: metadata
